# Trecl

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: main.py
src/LLMs/: cerebras.py
src/agents/: __init__.py  data_ingester.py  github_analyst.py  job_decoder.py  opportunity_curator.py  pain_synthesizer.py  researcher.py  writer.py
src/configs/: llms.py  tools.py
src/core/: config.py  knowledge_store.py  state.py
src/llm/: model.py
src/tools/: github.py  knowledge.py  search.py  tavily.py
tests/: conftest.py
tests/health/: test_cerebras_health.py  test_gemini_health.py  test_github_health.py  test_qdrant_health.py  test_tavily_health.py
tests/integration/: test_knowledge_e2e.py  test_mock_pipeline.py
tests/manual/: check_knowledge_store.py
tests/smoke/: test_config.py  test_imports.py  test_state.py
tests/unit/: test_agent_nodes.py  test_github_guardrails.py  test_knowledge_store.py  test_llm_retry.py
