[project]
name = "trecl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-cerebras>=0.8.2",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.22",
    "tenacity>=9.1.4",
]
